--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           github_user_name: FlipNeves
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg?color_snake=#6366F1&color_dots=#0D1117,#1a1b27,#24283b,#414868,#6366F1
+            dist/github-contribution-grid-snake-dark.svg?color_snake=#6366F1&color_dots=#0D1117,#1a1b27,#24283b,#414868,#6366F1
 
       - name: Commit and Push
         run: |
