--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           github_user_name: FlipNeves
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=#6366F1&color_dots=#0D1117,#1a1b27,#24283b,#414868,#6366F1
-            dist/github-contribution-grid-snake-dark.svg?color_snake=#6366F1&color_dots=#0D1117,#1a1b27,#24283b,#414868,#6366F1
+            dist/snake.svg
+            dist/snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit and Push
         run: |
